--- a/front-end/styles.css
+++ b/front-end/styles.css
@@ -3,31 +3,63 @@
     margin: 0;
 }
 
+header{
+    width: 100vw;
+    background-color: #800020;
+}
+
 h1{
     padding: 10px;
     width: 100vw;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
-    background-color: #800020;
     color: aliceblue;
 }
 
-header{
-    padding: 10px;
-    width: 100vw;
-    color: #800020;
+h2{
+    margin: 10px;
+    margin-top: 10px;
+    margin-bottom: 5px;
+    text-align: center;
 }
 
 h3{
     text-align: center;
 }
 
+.got-it{
+    text-align: center;
+}
+
+.inst{
+    font-weight: bold;
+    margin-top: 3px;
+    margin-bottom: 0px;
+}
+
+p{
+    margin: 10px;
+    margin-top: 3px;
+    text-align: left;
+}
+
 form{
-    
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     border-style: solid;
     border-width: 5px;
     width: 300px;
-    
+    padding: 10px;
+    margin-top: 10px;
+}
+
+button{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    padding: 5px;
 }
 
 
