--- a/front-end/styles.css
+++ b/front-end/styles.css
@@ -3,17 +3,37 @@
     margin: 0;
 }
 
+body{
+    /* background-color: #C1CBCE; */
+}
+
 header{
     width: 100vw;
     background-color: #800020;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 h1{
     padding: 10px;
-    width: 100vw;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    text-align: center;
     color: aliceblue;
+    width: fit-content;
+    margin-left: 39vw;
+    
+}
+
+nav{
+    display: flex;
+    flex-direction: row-reverse ;
+    align-items: center;
+    margin-right: 10px;
+}
+
+a {
+    color: aliceblue;
+    text-decoration: none;
 }
 
 h2{
@@ -52,6 +72,8 @@ form{
     width: 300px;
     padding: 10px;
     margin-top: 10px;
+    background-color: aliceblue;
+    border-color: #800020;
 }
 
 button{
@@ -62,6 +84,9 @@ button{
     padding: 5px;
 }
 
-
+#get-restaurant{
+    font-size: 100px;
+    text-align: center;
+}
 
 
