--- a/front-end/styles.css
+++ b/front-end/styles.css
@@ -1,6 +1,7 @@
 *{
     padding: 0;
     margin: 0;
+   font-family: 'Roboto Condensed', sans-serif;
 }
 
 header{
@@ -70,7 +71,8 @@ form{
     margin-right: auto;
     border-style: solid;
     border-width: 5px;
-    width: 300px;
+    width: 600px;
+    height: 400px;
     padding: 10px;
     margin-top: 10px;
     background-color: aliceblue;
