--- a/front-end/styles.css
+++ b/front-end/styles.css
@@ -88,10 +88,21 @@ button{
 }
 
 #get-restaurant{
-    font-size: 100px;
+    font-size: 80px;
     text-align: center;
 }
 
 .hide{
     display: none;
+}
+
+#spin-again{
+    height: 40px;
+    width: 100px;
+    font-size: 15px;
+}
+
+#back{
+    font-size: 20px;
+    color: #800020;
 }
