--- a/front-end/ourChoices.css
+++ b/front-end/ourChoices.css
@@ -23,16 +23,30 @@ button{
     justify-content: space-evenly;
 }
 
-#fast-btn{
-
+button{
+    display: block;
+    padding: 15px 25px;
+    font-size: 24px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: aliceblue;
+    background-color: black;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 9px #999;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5px;
 }
 
-#sit-btn{
-    
-}
+button:hover {background-color: #800020}
 
-#Fancy-Foods{
-
+button:active {
+  background-color: #800020;
+  box-shadow: 0 5px aliceblue;
+  transform: translateY(4px);
 }
 
 p{
@@ -55,15 +69,16 @@ a{
 }
 
 #spin-again{
-    height: 40px;
-    width: 100px;
-    font-size: 15px;
+    height: 60px;
+    width: 80px;
+    font-size: 12px;
 }
 
 #direction{
     height: 40px;
-    width: 80px;
-    font-size: 15px;
+    width: 100px;
+    font-size: 12px;
+    margin-top: 20px;
 }
 
 #back{
