--- a/front-end/styles.css
+++ b/front-end/styles.css
@@ -21,9 +21,8 @@ h1{
 }
 
 img{
-    height: 90px;
-    width: 80px;
-  
+    height: 80px;
+    width: 70px;
 }
 
 nav{
@@ -45,6 +44,13 @@ h2{
     text-align: center;
 }
 
+.popup {
+    position: relative;
+    display: block;
+    text-align: center;
+    cursor: pointer;
+}
+
 h3{
     text-align: center;
 }
@@ -62,6 +68,7 @@ h3{
 p{
     margin: 10px;
     margin-top: 3px;
+    font-size: 17px;
     text-align: left;
 }
 
@@ -75,20 +82,64 @@ form{
     height: 400px;
     padding: 10px;
     margin-top: 10px;
+    margin-bottom: 10px;
     background-color: aliceblue;
     border-color: #800020;
+    border-radius: 12px;
+}
+
+label{
+    font-size: 32px;
+}
+
+#restaurant-input{
+    width: 190px;
+    height: 20px;
+}
+
+#type{
+    width: 190px;
+    height: 25px;
+}
+
+h4{
+    font-size: 20px;
 }
 
 button{
     display: block;
+    padding: 15px 25px;
+    font-size: 24px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: aliceblue;
+    background-color: black;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 9px #999;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 10px;
-    padding: 5px;
+    margin-top: 5px;
+}
+
+button:hover {background-color: #800020}
+
+button:active {
+  background-color: #800020;
+  box-shadow: 0 5px aliceblue;
+  transform: translateY(4px);
+}
+
+#add-restaurant{
+    width: 200px;
+    height: 50px;
+    font-size: 20px;
 }
 
 #get-restaurant{
-    font-size: 80px;
+    font-size: 50px;
     text-align: center;
 }
 
@@ -97,9 +148,16 @@ button{
 }
 
 #spin-again{
-    height: 40px;
-    width: 100px;
+    height: 70px;
+    width: 90px;
     font-size: 15px;
+}
+
+#direction{
+    width: 110px;
+    height: 60px;
+    font-size: 15px;
+    margin-top: 20px;
 }
 
 #back{
